fixed move notes test